--- a/Prova_B/E01_opTern[b].html
+++ b/Prova_B/E01_opTern[b].html
@@ -2,8 +2,11 @@
     //USANDO OPERADOR TERNÁRIO USANDO OPERADOR TERNÁRIO USANDO OPERADOR TERNÁRIO
     
     //PROBLEMA: Perfil do Profissional
-    //Peça para o usuário informar quantos anos possui de experiência profissional. Peça também para que o Profissional informe se possui Curso de Graduação e também informar se possui Curso de Pós-Graduação. Outro dado relevante é perguntar se o Profissional realiza trabalho de voluntariado.
-    //Considere que cada ano de experiência equivale 1.5 pontos, possuir Curso Curso de Graduação equivale 10 pontos e possuir Curso de Pós-Graduação equivale a 15 pontos. Realizar trabalho de voluntariado equivale a 10 pontos.
+    //Peça para o usuário informar quantos anos possui de experiência profissional. Peça também para que o 
+    ///Profissional informe se possui Curso de Graduação e também informar se possui Curso de Pós-Graduação.
+    ///Outro dado relevante é perguntar se o Profissional realiza trabalho de voluntariado.
+    //Considere que cada ano de experiência equivale 1.5 pontos, possuir Curso Curso de Graduação equivale 10 pontos e possuir Curso de Pós-Graduação
+    ///equivale a 15 pontos. Realizar trabalho de voluntariado equivale a 10 pontos.
 
     //Se o Profissional possuir até 35 pontos (inclusive), será considerado EM EVOLUÇÃO.
     //Se o Profissional possuir mais de 35 pontos, será considerado VETERANO.
@@ -12,10 +15,26 @@
 
     //ENTRADA
 
+    const anosExperiencia = parseInt(prompt("quantos anos de experiência profissional você possui?"));
+    const cursoGraduacao = parseInt(prompt("você possiu curso de graduação? (0-Não | 1-Sim)"));
+    const cursoPosGraduacao = parseInt(prompt("você possui curso de pós graduação? (0-Não | 1-Sim"));
+    const trabalhoVoluntariado = parseInt(prompt("você realiza algum trabalho voluntáriado? 0-Não | 1-Sim"));
+    let resultadoNaTela;
 
     //PROCESSAMENTO
 
+    const pontosAnosExperiencia = anosExperiencia * 1.5;
+    const pontosGraduacao = cursoGraduacao * 10;
+    const pontosPosGraduacao = cursoPosGraduacao * 15;
+    const pontosTrabalhoVoluntariado = trabalhoVoluntariado * 10;
+
+    let pontosTotal = pontosAnosExperiencia + pontosGraduacao + pontosPosGraduacao + pontosTrabalhoVoluntariado;
+
+    (pontosTotal <= 35) ? resultadoNaTela = "Em evolução"
+    : resultadoNaTela = "Veterano";
 
     //SAÍDA
+
+    document.write(resultadoNaTela);
 
 </script>
